2008-06-18  Andy Buckley  <andy@insectnation.org>

	* Added extra sorted Jets and Pseudojets methods to FastJets, and
	added ptmin argument to the JetAlg getJets() method, requiring a
	change to TrackJet.

2008-06-13  Andy Buckley  <andy@insectnation.org>

	* Fixed processing of "RG" parameters to ensure that invalid
	iterators are never used.

2008-06-10  Andy Buckley  <andy@insectnation.org>

	* Updated AIDA reference files, changing "/HepData" root path to
	"/REF". Still missing a couple of reference files due to upstream
	problems with the HepData records.

2008-06-09  Andy Buckley  <andy@insectnation.org>

	* rivetgun now handles termination signals (SIGTERM, SIGINT and
	SIGHUP) gracefully, finishing the event loop and finalising
	histograms. This means that histograms will always get written
	out, even if not all the requested events have been generated.

2008-06-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added DELPHI_2002_069_CONF_603 analysis

2008-05-30  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added InitialQuarks projection
	* Added OPAL_1998_S3780481 analysis

2008-05-29  Andy Buckley  <andy@insectnation.org>

	* distcheck compatibility fixes and autotools tweaks.

2008-05-28  Andy Buckley  <andy@insectnation.org>

	* Converted FastJet to use Boost smart_ptr for its plugin
	handling, to solve double-delete errors stemming from the heap
	cloning of projections.

	* Added (a subset of) Boost headers, particularly the smart
	pointers.

2008-05-24  Andy Buckley  <andy@insectnation.org>

	* Added autopackage spec files.

	* Merged these changes into the trunk.

	* Added a registerClonedProjection(...) method to
	ProjectionHandler: this is needed so that cloned projections will
	have valid pointer entries in the ProjectHandler repository.

	* Added clone() methods to all projections (need to use this,
	since the templated "new PROJ(proj)" approach to cloning can't
	handle object polymorphism.

2008-05-19  Andy Buckley  <andy@insectnation.org>
